--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -48,10 +48,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="blackOpaque" placeholder="Hero Name, Nickname or Role" id="4xJ-fk-7oq">
+                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="blackTranslucent" placeholder="Role, Name or Nickname" id="4xJ-fk-7oq">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="tintColor" red="0.12549019607843137" green="0.035294117647058823" blue="0.047058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
                                 <outlet property="delegate" destination="12" id="aQT-oL-rhJ"/>
