--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
@@ -115,10 +115,13 @@
                         <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                         <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="blackTranslucent" placeholder="Role, Name or Nickname" id="png-ob-h1H">
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Role, name or nickname" id="Iqz-GE-mKI">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="19" id="O22-Fs-gi5"/>
+                            </connections>
                         </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HeroCell" rowHeight="62" id="sVY-7y-FFb" customClass="HeroCell">
@@ -170,7 +173,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Heroes" id="40"/>
                     <connections>
-                        <outlet property="searchDisplayController" destination="wmO-a8-eIS" id="pEh-1U-ykX"/>
+                        <outlet property="searchDisplayController" destination="DPv-Uu-HBD" id="Dwi-iK-vXI"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="23" sceneMemberID="firstResponder"/>
@@ -180,6 +183,22 @@
                         <outlet property="searchContentsController" destination="19" id="ubR-ug-h6U"/>
                         <outlet property="searchResultsDataSource" destination="19" id="rEO-2U-Dc0"/>
                         <outlet property="searchResultsDelegate" destination="19" id="M01-HQ-WKv"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="1PY-Tl-j7f">
+                    <connections>
+                        <outlet property="delegate" destination="19" id="vM1-dR-hQB"/>
+                        <outlet property="searchContentsController" destination="19" id="Ake-yD-qcO"/>
+                        <outlet property="searchResultsDataSource" destination="19" id="lZ9-1t-zC0"/>
+                        <outlet property="searchResultsDelegate" destination="19" id="vUd-bT-Qxa"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="DPv-Uu-HBD">
+                    <connections>
+                        <outlet property="delegate" destination="19" id="O7Z-Es-KR6"/>
+                        <outlet property="searchContentsController" destination="19" id="AGl-dp-Jsu"/>
+                        <outlet property="searchResultsDataSource" destination="19" id="9gW-iV-X2b"/>
+                        <outlet property="searchResultsDelegate" destination="19" id="cmP-ZN-GWD"/>
                     </connections>
                 </searchDisplayController>
             </objects>
