Added hero detail to iPhone as well xoxxxoxoo

--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -416,7 +416,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Attack range" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="279-H1-Gc6">
-                                <rect key="frame" x="20" y="317" width="133" height="21"/>
+                                <rect key="frame" x="301" y="288" width="133" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -424,13 +424,6 @@
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Missile speed" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fxa-qz-i8W">
                                 <rect key="frame" x="301" y="254" width="133" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Attack duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0N5-bs-hCe">
-                                <rect key="frame" x="301" y="288" width="133" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -451,7 +444,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="D2a-74-Vds">
-                                <rect key="frame" x="149" y="317" width="127" height="21"/>
+                                <rect key="frame" x="436" y="288" width="127" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -459,27 +452,6 @@
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rkT-3q-qz7">
                                 <rect key="frame" x="442" y="254" width="121" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="y4u-mX-Gum">
-                                <rect key="frame" x="442" y="288" width="121" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Cast duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dRq-4k-VbX">
-                                <rect key="frame" x="301" y="317" width="133" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jwl-Yf-aRa">
-                                <rect key="frame" x="442" y="317" width="121" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -510,10 +482,8 @@
                     <connections>
                         <outlet property="agilityPointsLabel" destination="P53-jF-85a" id="JaM-Lv-TWy"/>
                         <outlet property="armorPointsLabel" destination="kff-rZ-UHI" id="G37-Gy-dad"/>
-                        <outlet property="attackDurationLabel" destination="y4u-mX-Gum" id="COg-ew-Khp"/>
                         <outlet property="attackRangeLabel" destination="D2a-74-Vds" id="MbA-Gr-XcA"/>
                         <outlet property="bioLabel" destination="YBu-Oj-rbf" id="zzo-Ab-uRK"/>
-                        <outlet property="castDurationLabel" destination="Jwl-Yf-aRa" id="jgc-Yf-Vvi"/>
                         <outlet property="damagePointsLabel" destination="EmO-h5-UMF" id="krL-S4-gcI"/>
                         <outlet property="factionImageView" destination="J0H-b9-sY0" id="03g-kE-4J0"/>
                         <outlet property="heroImageView" destination="tHT-7U-HAB" id="FTB-Mn-Jal"/>
@@ -724,6 +694,7 @@
                 <relationship kind="outlet" name="sightRangeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="strengthPointsLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="turnRateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="view" candidateClass="UIScrollView"/>
             </relationships>
         </class>
         <class className="ItemsTableViewController" superclassName="UITableViewController">
